force-app/main/default/objects/EInvoiceTransmission__c/EInvoiceTransmission__c.object-meta.xml
<CustomObject>
    <description>Suivi d'un dépôt de facture électronique vers Chorus Pro ou une plateforme agréée.</description>
    <label>Transmission électronique</label>
    <nameField><displayFormat>EINV-{000000}</displayFormat><label>Numéro de transmission</label><type>AutoNumber</type></nameField>
    <pluralLabel>Transmissions électroniques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>