force-app/main/default/objects/EInvoiceTransmission__c/fields/ErrorMessage__c.field-meta.xml
<CustomField><fullName>ErrorMessage__c</fullName><label>Détail de l'erreur</label><length>32000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>