force-app/main/default/objects/EInvoiceTransmission__c/fields/ExternalReference__c.field-meta.xml
<CustomField><fullName>ExternalReference__c</fullName><label>Référence externe</label><length>100</length><required>false</required><type>Text</type></CustomField>