force-app/main/default/objects/EInvoiceTransmission__c/fields/Invoice__c.field-meta.xml
<CustomField><fullName>Invoice__c</fullName><label>Facture</label><referenceTo>Invoice__c</referenceTo><relationshipLabel>Transmissions électroniques</relationshipLabel><relationshipName>EInvoiceTransmissions</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>