force-app/main/default/objects/EInvoiceTransmission__c/fields/LastCheckedAt__c.field-meta.xml
<CustomField><fullName>LastCheckedAt__c</fullName><label>Dernière vérification</label><required>false</required><type>DateTime</type></CustomField>