force-app/main/default/objects/EInvoiceTransmission__c/fields/PayloadDocumentId__c.field-meta.xml
<CustomField><fullName>PayloadDocumentId__c</fullName><label>Identifiant du fichier transmis</label><length>18</length><required>false</required><type>Text</type></CustomField>