force-app/main/default/objects/EInvoiceTransmission__c/fields/Provider__c.field-meta.xml
<CustomField><fullName>Provider__c</fullName><label>Canal</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>ChorusPro</fullName><default>false</default><label>Chorus Pro</label></value><value><fullName>AccreditedPlatform</fullName><default>false</default><label>Plateforme agréée</label></value></valueSetDefinition></valueSet></CustomField>