force-app/main/default/objects/EInvoiceTransmission__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Statut</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Prepared</fullName><default>true</default><label>Préparée</label></value><value><fullName>Pending</fullName><default>false</default><label>En attente d'envoi</label></value><value><fullName>Submitted</fullName><default>false</default><label>Déposée</label></value><value><fullName>Accepted</fullName><default>false</default><label>Acceptée</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejetée</label></value><value><fullName>Paid</fullName><default>false</default><label>Mise en paiement</label></value><value><fullName>Error</fullName><default>false</default><label>Erreur</label></value></valueSetDefinition></valueSet></CustomField>