force-app/main/default/objects/EInvoiceTransmission__c/fields/SubmittedAt__c.field-meta.xml
<CustomField><fullName>SubmittedAt__c</fullName><label>Date de dépôt</label><required>false</required><type>DateTime</type></CustomField>